# Multi-AI-Agent-

./: .gitignore  Jenkinsfile  pyproject.toml  requirements.txt  setup.py
MULTI_AI_AGENT.egg-info/: SOURCES.txt
app/: Dockerfile  main.py
app/backend/: api.py
app/config/: settings.py
app/core/: ai_agent.py
app/frontend/static/: app.js  index.html  style.css
custom jenkins/: Dockerfile
